Fixes layout issues with chart. Gets rid of chart-react2 npm module and use chart.js directly. Give map height on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -27,26 +27,20 @@ body {
   width: 100%;
 }
 .main-background .dark-overlay {
-  /* display: flex;
+  display: flex;
   flex-direction: row;
-  justify-content: center; */
+  justify-content: center;
 }
 .landing-inner {
   color: #fff;
   height: 100%;
   width: 80%;
   margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
 .main-background {
   background: url('http://cdn.shopify.com/s/files/1/1207/2972/products/x31_grande.jpg?v=1500555567')
     no-repeat center center/cover fixed;
-  background-attachment: fixed;
 }
 
 .container {
@@ -105,7 +99,13 @@ body {
   background: white;
 }
 
+.chart-container {
+  position: relative;
+  width: 90%;
+}
+
 .restaurant-container {
+  grid-area: restaurants;
 }
 
 h2.section-title {
@@ -115,7 +115,6 @@ h2.section-title {
 }
 
 .restaurant-list {
-  grid-area: restaurants;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -153,8 +152,8 @@ h2.section-title {
 .brewery-container {
   grid-area: breweries;
 }
+
 .breweries-list {
-  grid-area: restaurants;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -207,5 +206,38 @@ h2.section-title {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6);
     grid-template-areas: 'header' 'search' 'map' 'weather' 'restaurants' 'breweries';
+  }
+  .chart-container {
+    position: relative;
+    width: 90%;
+  }
+
+  .header-container {
+    grid-area: header;
+    text-align: center;
+  }
+
+  .search-container {
+    grid-area: search;
+    text-align: center;
+  }
+
+  .map-container {
+    position: relative;
+    grid-area: map;
+    height: 300px;
+  }
+
+  .weather-container {
+    grid-area: weather;
+    background: white;
+  }
+
+  .restaurant-container {
+    grid-area: restaurants;
+  }
+
+  .brewery-container {
+    grid-area: breweries;
   }
 }
